--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,11 @@
       #mc_embed_signup .button:hover {
         background-color: #58595b;
       }
+      @media screen and (min-width: 736px) {
+        #mc_embed_signup label {
+          padding-bottom: 0;
+        }
+      }
       @media (max-width: 768px) {
         #mc_embed_signup .button {
           width: auto;
@@ -79,7 +84,7 @@
     </style>
   </head>
   <body>
-
+    <!--<img src="./images/HH_splash_background-lg.jpg" alt="Hope & Henry" />-->
     <main id="main">
       <div class="container">
         <img class="logo" src="./images/HH-splash-logo.png" alt="Hope & Henry Logo" />
@@ -100,6 +105,7 @@
         <!--End mc_embed_signup-->
       </div>
     </main>
+
     <footer>
       <p>Hope & Henry and Quality Goods for the Greater Good are trademarks of Hope & Henry, LLC.</p>
     </footer>
